force-app/main/default/objects/Intix_connection_details__mdt/Intix_connection_details__mdt.object-meta.xml
<CustomObject>
    <description>CDCS-135 Connection details for INTIX callouts</description>
    <label>Intix connection details</label>
    <pluralLabel>Intix connections details</pluralLabel>
</CustomObject>