force-app/main/default/objects/Intix_connection_details__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>CDCS-135 This field holds the value of a password used to generate authentication token.</description>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>