force-app/main/default/objects/Intix_connection_details__mdt/fields/Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>Records_Limit__c</fullName>
    <description>CDCS-135 This field holds the maximal number of records retrieved from Intix in a single request.</description>
    <label>Records Limit</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>