force-app/main/default/objects/Intix_connection_details__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>CDCS-135 This field holds the value of a usernameused to generate authentication token.</description>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>